@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 13-09-2005 added: Display of type of audiostream (Commentary, For Hearing impaired on those dvd's that support it)
  - 13-09-2005 changed: dvdplayer now select and show audio and subtitle streams, soly based on what's specifed in ifo files. mapping of this to the mpeg streams should now be correct too
  - 13-09-2005 added: Alternative ascii-gfx Filezilla (FTP) Welcome MSG. Disabled by default, to enable, first disable (comment) org. MSG, then uncomment new MSG. Use an ASCII capable font for display in ftpCLIENT. Thx to h8!
  - 12-09-2005 changed: XBMC DVD-Player is public now, and is now used by default when playing dvd's
